[package]
name = "redis-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
log = "0.4.20"
rand = "0.8.5"
regex = "1.10.2"
thiserror = "1.0.51"
tokio = { version = "1.35.1", features = ["rt", "macros", "net", "io-util"] }
